--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body {
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 150%;
-    transition: all 0.5s ease;;
+    transition: all 0.5s ease;
 }
 .social_links a:hover {
     background-color: var(--Green);
